--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "test": "echo \"This template does not include a test runner by default.\" && exit 1"
   },
   "devDependencies": {
+    "axios": "^0.21.0",
+    "faker": "^5.1.0",
+    "miragejs": "^0.1.41",
     "snowpack": "^2.17.1"
   }
 }
